--- a/index.html
+++ b/index.html
@@ -6,26 +6,26 @@
   <link href="jspsych.css" rel="stylesheet" />
   <script src="jspsych.js"></script>
   <style>
-    body {
-      text-align: center;
-      padding-top: 50px;
-      background-color: #f0f0f0;
-    }
-    #visual-container {
-      width: 800px;
-      height: 450px;
-      margin: auto;
-      background-color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    video, img {
-      max-width: 100%;
-      max-height: 100%;
-      display: none;
-    }
-  </style>
+  body {
+    text-align: center;
+    padding-top: 50px;
+    background-color: #cce6e6; 
+  }
+  #visual-container {
+    width: 1280px;  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 4px solid #999;  
+    border-radius: 12px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  }
+  video, img {
+    max-width: 100%;
+    max-height: 100%;
+    display: none;
+  }
+</style>
 </head>
 <body>
 
