--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     body {
       text-align: center;
       padding-top: 50px;
-      background-color: #cce6e6;
+      background-color: #f0f0f0;
     }
     #visual-container {
-      width: 1200px;
+      width: 800px;
       height: 450px;
       margin: auto;
-      background-color: #cce6e6;
+      background-color: white;
       display: flex;
       align-items: center;
       justify-content: center;
