--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Synced Stimuli Player</title>
+  <title>Melody's Mystery Elevator</title>
   <link href="jspsych.css" rel="stylesheet" />
   <script src="jspsych.js"></script>
  <style>
@@ -12,8 +12,8 @@
       background-color: #f0f0f0;
     }
     #visual-container {
-      width: 800px;
-      height: 450px;
+      width: 1200px;
+      height: 600px;
       margin: auto;
       background-color: white;
       display: flex;
