--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     #visual-container {
       width: 1200px;
       height: 600px;
-      margin: 20px;
+      margin: auto;
       background-color: white;
       display: flex;
       align-items: center;
