--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <style>
     body {
       text-align: center;
-      padding-top: 50px;
+      padding-top: 20px;
       background-color: #f0f0f0;
     }
     #visual-container {
       width: 1200px;
       height: 850px;
-      margin: 0;
+      margin: auto;
       background-color: white;
       display: flex;
       align-items: center;
