--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
     body {
       text-align: center;
       padding-top: 50px;
-      background-color: #cefefe;
+      background-color: #f0f0f0;
     }
-
     #visual-container {
-      display: inline-block;
+      width: 800px;
+      height: 450px;
+      margin: auto;
       background-color: white;
-      padding: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
-
     video, img {
+      max-width: 100%;
+      max-height: 100%;
       display: none;
     }
   </style>
