--- a/index.html
+++ b/index.html
@@ -6,26 +6,30 @@
   <link href="jspsych.css" rel="stylesheet" />
   <script src="jspsych.js"></script>
 <style>
-    body {
-      text-align: center;
-      padding-top: 50px;
-      background-color: #f0f0f0;
-    }
-    #visual-container {
-      width: 800px;
-      height: 450px;
-      margin: auto;
-      background-color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    video, img {
-      max-width: 100%;
-      max-height: 100%;
-      display: none;
-    }
-  </style>
+  html, body {
+    margin: 0;
+    padding: 0;
+    background-color: white; /* or match your elevator wall color */
+    overflow: hidden;
+  }
+
+  #visual-container {
+    width: 100vw;
+    height: 100vh;
+    background-color: #cde6e6; /* match background in the image */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  img, video {
+    width: auto;
+    height: 100%;
+    max-height: 100vh;
+    display: block;
+  }
+</style>
+
 </head>
 <body>
 <div id="visual-container">
