--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       text-align: center;
       padding-top: 50px;
-      background-color: #cefefe;
+      background-color: #fofofo;
     }
     #visual-container {
       width: 1200px;
