--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     body {
       text-align: center;
       padding-top: 50px;
-      background-color: #fofofo;
+      background-color: white;
     }
     #visual-container {
       width: 1200px;
       height: 850px;
       margin: auto;
-      background-color: #cefefe;
+      background-color: white;
       display: flex;
       align-items: center;
       justify-content: center;
