--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
     #visual-container {
       width: 1200px;
-      height: 900px;
+      height: 850px;
       margin: auto;
       background-color: white;
       display: flex;
@@ -25,6 +25,13 @@
       max-height: 100%;
       display: none;
     }
+  button {
+    position: absolute;
+    bottom: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 10;
+  }
   </style>
 </head>
 <body>
