--- a/index.html
+++ b/index.html
@@ -23,11 +23,16 @@
       justify-content: center;
       border-radius: 12px;
       box-shadow: 0 2px 12px rgba(0,0,0,0.07);
+      overflow: hidden; /* Prevents overflow from media */
+      position: relative;
     }
-    video, img {
-      max-width: 100%;
-      max-height: 100%;
+    .media-content {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
       display: none;
+      position: absolute;
+      top: 0; left: 0;
     }
     #playButton {
       display: block;
@@ -50,12 +55,12 @@
 </head>
 <body>
   <div id="visual-container">
-    <img id="stillframe1" src="stillframe1.png" />
-    <img id="gapStillframe" src="gapStillframe.png" />
-    <img id="stillframe2" src="stillframe2.png" />
-    <video id="video1" src="video1.mp4" playsinline preload="auto" muted></video>
-    <video id="gapVideo" src="gapVideo.mp4" playsinline preload="auto" muted></video>
-    <video id="video2" src="video2.mp4" playsinline preload="auto" muted></video>
+    <img class="media-content" id="stillframe1" src="stillframe1.png" />
+    <img class="media-content" id="gapStillframe" src="gapStillframe.png" />
+    <img class="media-content" id="stillframe2" src="stillframe2.png" />
+    <video class="media-content" id="video1" src="video1.mp4" playsinline preload="auto" muted></video>
+    <video class="media-content" id="gapVideo" src="gapVideo.mp4" playsinline preload="auto" muted></video>
+    <video class="media-content" id="video2" src="video2.mp4" playsinline preload="auto" muted></video>
   </div>
   <audio id="myAudio" hidden preload="auto"></audio>
   <button id="playButton">Press to Begin Trial</button>
