--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
       background-color: white;
     }
     #visual-container {
-      width: 90vw;
-      height: 80vh;
-      max-width: 1400px;
-      max-height: 950px;
-      margin: 40px auto 0 auto;
-      background-color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border-radius: 12px;
-      box-shadow: 0 2px 12px rgba(0,0,0,0.07);
-      overflow: hidden; /* Prevents overflow from media */
-      position: relative;
-    }
+  width: 90vw;
+  height: 80vh;
+  max-width: 1400px;
+  max-height: 950px;
+  margin: 80px auto 0 auto;   /* Increased top margin to shift down */
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0;           /* Sharp corners */
+  box-shadow: 0 2px 12px rgba(0,0,0,0.07);
+  overflow: hidden;
+  position: relative;
+}
     .media-content {
       width: 100%;
       height: 100%;
