--- a/index.html
+++ b/index.html
@@ -7,35 +7,38 @@
   <script src="jspsych.js"></script>
   <style>
     body {
-      text-align: center;
       margin: 0;
+      text-align: center;
       background-color: white;
+      font-family: Arial, sans-serif;
     }
+
     #visual-container {
-  width: 90vw;
-  height: 80vh;
-  max-width: 1400px;
-  max-height: 950px;
-  margin: 80px auto 0 auto;   /* Increased top margin to shift down */
-  background-color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 0;           /* Sharp corners */
-  box-shadow: 0 2px 12px rgba(0,0,0,0.07);
-  overflow: hidden;
-  position: relative;
-}
+      width: 90vw;
+      height: 80vh;
+      max-width: 1400px;
+      max-height: 950px;
+      margin: 80px auto 0 auto;
+      background-color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 0 2px 12px rgba(0, 0, 0, 0.07);
+      overflow: hidden;
+      position: relative;
+    }
+
     .media-content {
       width: 100%;
       height: 100%;
       object-fit: contain;
       display: none;
       position: absolute;
-      top: 0; left: 0;
+      top: 0;
+      left: 0;
     }
+
     #playButton {
-      display: block;
       margin: 24px auto 0 auto;
       padding: 14px 32px;
       font-size: 1.2em;
@@ -45,15 +48,33 @@
       color: #4b2e83;
       font-weight: bold;
       cursor: pointer;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
       transition: background 0.2s;
     }
+
     #playButton:hover {
       background: #e3d0ff;
+    }
+
+    #response-container {
+      display: none;
+      margin-top: 30px;
+    }
+
+    .elevator-option {
+      width: 300px;
+      margin: 20px;
+      cursor: pointer;
+      transition: transform 0.2s ease;
+    }
+
+    .elevator-option:hover {
+      transform: scale(1.05);
     }
   </style>
 </head>
 <body>
+
   <div id="visual-container">
     <img class="media-content" id="stillframe1" src="stillframe1.png" />
     <img class="media-content" id="gapStillframe" src="gapStillframe.png" />
@@ -62,22 +83,19 @@
     <video class="media-content" id="gapVideo" src="gapVideo.mp4" playsinline preload="auto" muted></video>
     <video class="media-content" id="video2" src="video2.mp4" playsinline preload="auto" muted></video>
   </div>
+
   <audio id="myAudio" hidden preload="auto"></audio>
   <button id="playButton">Press to Begin Trial</button>
 
-<script>
-let isPlaying = false;
-let trialQueued = false;
+  <div id="response-container">
+    <img id="normalElevator" class="elevator-option" src="normal.png" alt="Normal Elevator" />
+    <img id="wonkyElevator" class="elevator-option" src="wonky.png" alt="Wonky Elevator" />
+  </div>
 
-document.getElementById("playButton").addEventListener("click", async function () {
-  if (isPlaying) {
-    trialQueued = true; // Queue next trial
-    return;
-  }
-
-  async function playTrial() {
-    isPlaying = true;
-    trialQueued = false;
+  <script>
+    let isPlaying = false;
+    let trialQueued = false;
+    let responseLog = [];
 
     const audio = document.getElementById("myAudio");
     const still1 = document.getElementById("stillframe1");
@@ -86,7 +104,6 @@ document.getElementById("playButton").addEventListener("click", async function (
     const v1 = document.getElementById("video1");
     const vGap = document.getElementById("gapVideo");
     const v2 = document.getElementById("video2");
-
     const visuals = [
       { el: still1, start: 0, end: 0 },
       { el: v1, start: 0, end: 0 },
@@ -106,100 +123,133 @@ document.getElementById("playButton").addEventListener("click", async function (
       });
     }
 
-    hideAll();
+    function showResponseOptions() {
+      document.getElementById("response-container").style.display = "block";
+    }
 
-    try {
-      const response = await fetch("audio_files.csv");
-      if (!response.ok) throw new Error("CSV file not found");
-      const text = await response.text();
-      const rows = text.trim().split("\n").slice(1).map(r => r.split(",").map(x => x.trim()));
-      if (rows.length === 0) throw new Error("No valid audio rows found");
+    function handleResponse(choice) {
+      const timestamp = new Date().toISOString();
+      responseLog.push({ timestamp, choice });
+      document.getElementById("response-container").style.display = "none";
+      console.log("User selected:", choice);
+      downloadCSV(responseLog);
+    }
 
-      const [filename, original, gap, test] = rows[Math.floor(Math.random() * rows.length)];
-      const originalSec = parseFloat(original);
-      const gapSec = parseFloat(gap);
-      const testSec = parseFloat(test);
-      const audioURL = filename;
+    function downloadCSV(data) {
+      const csvRows = [
+        "timestamp,choice",
+        ...data.map(row => `${row.timestamp},${row.choice}`)
+      ];
+      const blob = new Blob([csvRows.join("\n")], { type: "text/csv" });
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement("a");
+      a.href = url;
+      a.download = "elevator_choices.csv";
+      a.click();
+      URL.revokeObjectURL(url);
+    }
 
-      await Promise.all([
-        v1.play().then(() => v1.pause()),
-        vGap.play().then(() => vGap.pause()),
-        v2.play().then(() => v2.pause())
-      ]);
+    document.getElementById("normalElevator").addEventListener("click", () => handleResponse("normal"));
+    document.getElementById("wonkyElevator").addEventListener("click", () => handleResponse("wonky"));
 
-      const video1Sec = v1.duration;
-      const gapVideoSec = vGap.duration;
-      const video2Sec = v2.duration;
+    document.getElementById("playButton").addEventListener("click", async function () {
+      if (isPlaying) {
+        trialQueued = true;
+        return;
+      }
 
-      const preStillSec = Math.max(0, originalSec - video1Sec);
-      const gapStillSec = Math.max(0, gapSec - gapVideoSec);
-      const postStillSec = Math.max(0, testSec - video2Sec);
+      async function playTrial() {
+        isPlaying = true;
+        trialQueued = false;
+        hideAll();
 
-      let t = 0;
-      visuals[0].start = t;
-      visuals[0].end = t += preStillSec;
+        try {
+          const response = await fetch("audio_files.csv");
+          if (!response.ok) throw new Error("CSV file not found");
+          const text = await response.text();
+          const rows = text.trim().split("\n").slice(1).map(r => r.split(",").map(x => x.trim()));
+          if (rows.length === 0) throw new Error("No valid audio rows found");
 
-      visuals[1].start = t;
-      visuals[1].end = t += video1Sec;
+          const [filename, original, gap, test] = rows[Math.floor(Math.random() * rows.length)];
+          const originalSec = parseFloat(original);
+          const gapSec = parseFloat(gap);
+          const testSec = parseFloat(test);
+          const audioURL = filename;
 
-      visuals[2].start = t;
-      visuals[2].end = t += gapStillSec;
+          await Promise.all([v1.play().then(() => v1.pause()), vGap.play().then(() => vGap.pause()), v2.play().then(() => v2.pause())]);
 
-      visuals[3].start = t;
-      visuals[3].end = t += gapVideoSec;
+          const video1Sec = v1.duration;
+          const gapVideoSec = vGap.duration;
+          const video2Sec = v2.duration;
 
-      visuals[4].start = t;
-      visuals[4].end = t += video2Sec;
+          const preStillSec = Math.max(0, originalSec - video1Sec);
+          const gapStillSec = Math.max(0, gapSec - gapVideoSec);
+          const postStillSec = Math.max(0, testSec - video2Sec);
 
-      visuals[5].start = t;
-      visuals[5].end = t += postStillSec;
+          let t = 0;
+          visuals[0].start = t;
+          visuals[0].end = t += preStillSec;
 
-      const totalSec = visuals[5].end;
+          visuals[1].start = t;
+          visuals[1].end = t += video1Sec;
 
-      audio.src = audioURL;
-      await new Promise((resolve, reject) => {
-        audio.oncanplaythrough = resolve;
-        audio.onerror = () => reject("Audio failed to load: " + audioURL);
-      });
+          visuals[2].start = t;
+          visuals[2].end = t += gapStillSec;
 
-      let currentVisual = null;
-      function updateVisuals() {
-        const t = audio.currentTime;
-        for (const v of visuals) {
-          if (t >= v.start && t < v.end) {
-            if (currentVisual !== v.el) {
-              hideAll();
-              v.el.style.display = "block";
-              if (v.el.tagName === "VIDEO") v.el.play();
-              currentVisual = v.el;
+          visuals[3].start = t;
+          visuals[3].end = t += gapVideoSec;
+
+          visuals[4].start = t;
+          visuals[4].end = t += video2Sec;
+
+          visuals[5].start = t;
+          visuals[5].end = t += postStillSec;
+
+          const totalSec = visuals[5].end;
+
+          audio.src = audioURL;
+          await new Promise((resolve, reject) => {
+            audio.oncanplaythrough = resolve;
+            audio.onerror = () => reject("Audio failed to load: " + audioURL);
+          });
+
+          let currentVisual = null;
+          function updateVisuals() {
+            const t = audio.currentTime;
+            for (const v of visuals) {
+              if (t >= v.start && t < v.end) {
+                if (currentVisual !== v.el) {
+                  hideAll();
+                  v.el.style.display = "block";
+                  if (v.el.tagName === "VIDEO") v.el.play();
+                  currentVisual = v.el;
+                }
+                break;
+              }
             }
-            break;
-          }
-        }
 
-        if (t < totalSec) {
-          requestAnimationFrame(updateVisuals);
-        } else {
-          hideAll();
-          isPlaying = false;
-          if (trialQueued) {
-            playTrial(); // Run next trial if queued
+            if (t < totalSec) {
+              requestAnimationFrame(updateVisuals);
+            } else {
+              hideAll();
+              isPlaying = false;
+              showResponseOptions();
+              if (trialQueued) playTrial();
+            }
           }
+
+          await audio.play();
+          updateVisuals();
+
+        } catch (err) {
+          console.error("Sync error:", err);
+          alert("Error playing synced sequence. See console for details.");
+          isPlaying = false;
         }
       }
 
-      await audio.play();
-      updateVisuals();
-
-    } catch (err) {
-      console.error("Sync error:", err);
-      alert("Error playing synced sequence. See console for details.");
-      isPlaying = false;
-    }
-  }
-
-  playTrial();
-});
-</script>
+      playTrial();
+    });
+  </script>
 </body>
 </html>
