--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
       const scriptURL = "https://script.google.com/macros/s/AKfycbzM7hsd9CQrv-ZiMR57hjNeUnf4hWRFVDkvmFPbQJhs--5kKOkdD3ONJONTkb7498Ni/exec"; 
 
-      fetch(scriptURL, {
+      fetch("https://script.google.com/macros/s/AKfycbzM7hsd9CQrv-ZiMR57hjNeUnf4hWRFVDkvmFPbQJhs--5kKOkdD3ONJONTkb7498Ni/exec", {
         method: "POST",
         body: JSON.stringify(entry),
         headers: { "Content-Type": "application/json" }
